--- a/style.css
+++ b/style.css
@@ -23,3 +23,8 @@ body {
     height: 230px;
     text-align: center;
 }
+.container {
+    width: 1440px;
+    height:80px;
+    background: #f7fdfe;
+}
