--- a/PhtshopTemplate/stylesheets/style.css
+++ b/PhtshopTemplate/stylesheets/style.css
@@ -4,43 +4,28 @@ body {
     font-family: 'Roboto Condensed', 'Open Sans', sans-serif;
 }
 
-.header {
-    height: 300px;
-    width: 100%;
+.header-navbar {
     background-color: #f7fdfe;
+}
+.dd-btn {
+    border-radius: 20%;
+    color: white;
+}
+.dd-btn :hover {
+    color: #000000;
+}
+.dd-lbl a{
     color: #82868f;
-    font-size: 24px;
 }
 
-.header-nav {
-    padding-top: 20px;
-    background-color: green;
-    height: 70px;
-}
-
-.header-title {
-    padding-top: 80px;
-    background-color: yellow;
-    height: 230px;
+.header-logo {
+    height: 500px;
+    padding-top: 190px;
     text-align: center;
+    color: white;
+    background: url('../images/mountain.jpg');
+    background-size: cover;
 }
-.dd-container {
-    width: 1440px;
-    height:80px;
-    background: #f7fdfe;
-}
-.logo {
-    float: left;
-    color: #82868f;
-}
-nav {
-    float: right;
-}
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-nav li {
-    display: inline-block;
+.header-logo p {
+    font-size: 32px;
 }
