--- a/PhtshopTemplate/stylesheets/style.css
+++ b/PhtshopTemplate/stylesheets/style.css
@@ -29,3 +29,23 @@ body {
 .header-logo p {
     font-size: 32px;
 }
+.section-light {
+    padding: 30px 0;
+    max-width: 400px;
+}
+.section-light h2 {
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 15px;
+}
+.section-light p {
+    text-align: center;
+}
+.footer {
+    padding-top: 35px;
+    height: 90px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+}
