--- a/PhtshopTemplate/stylesheets/style.css
+++ b/PhtshopTemplate/stylesheets/style.css
@@ -42,6 +42,12 @@ body {
 .section-light p {
     text-align: center;
 }
+.col-3 img {
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+}
+
 .footer {
     padding-top: 35px;
     height: 90px;
