--- a/Flexbox-Float-Bootstrap/stylesheets/style.css
+++ b/Flexbox-Float-Bootstrap/stylesheets/style.css
@@ -99,4 +99,13 @@ body {
 .container-dd div{
     background: lightskyblue;
     text-align: center;
+    margin:10px;
+    width: 100px;
+    height: 100px;
+}
+.container-dd dt {
+    margin: 20px;
+}
+.container-dd bb { 
+    margin: 20px;
 }
