--- a/BootstrapGrid/stylesheets/style.css
+++ b/BootstrapGrid/stylesheets/style.css
@@ -10,110 +10,23 @@ body {
     /* Шрифты бывают с засечками (serif) и без (sans-serif), см. в интернете */
 }
 
-.header-navbar {
-    background-color: #f9f9f9;
-}
-
-.header-logo {
-    height: 500px;
-
-    /* Отступ сверху, чтобы текст был посередине */
-    padding-top: 190px;
-
-    /* Выравнивание текста и цвет применятся на все дочернием блоки и элементы, в этом случае h1 и p */
-    text-align: center;
-    color: white;
-
-    /* Добавляю фон картинкой. '../images/header-bg.jpg' - относительный путь до нее */
-    /* Вот структура проекта
-        /-|
-          |- images/ -|
-          |           |- header-bg.jpg
-          |- stylesheets/ -|
-          |                |- style.css
-          |- scripts/ -|
-          |            |- app.js
-          |- index.html
-    */
-    /* Этот файл style.css находит в папке stylesheets/style.css */
-    /* А файл с картинкой лежит в папке images/header-bg.jpg */
-    /* '../' значит "вернуться в папку выше", т.е. в данном случае вернуться в корневую папку */
-    /* Затем зайти в папку images и выбрать header-bg.jpg */
-    background: url('../images/header-bg.jpg');
-
-    /* Определяет размер и правила вписывания картинки */
-    background-size: cover;
-}
-
-.header-logo h1 {
-    /* Преобразовать текст к капслоку */
-    text-transform: uppercase;
-
-    font-size: 88px;
-}
-
-.header-logo p {
-    font-size: 32px;
-}
-
-/* Класс header нигде не объявлялся, но в html коде он есть у тега header */
-/* Пускай будет, хуже от этого не будет, а если надо будет что-то менять, то он уже там есть */
-
-.section-light {
-    /* Отступы сверху и снизу по 30px, слева и справа 0 - отступов нет */
-    /* Равносильно записи padding-left: 30px; padding-right: 30px; */
-    padding: 30px 0;
-
-    /* Новый стиль min-height задает минимульную высоту (нефиксированную!) в 400px */
-    /* Если содержимого будет много, то по высоте блок растянется */
-    /* Если указать просто height: 400px; то если текста будет слишком много, то он просто поползет за блок */
-    /* Логично, что есть и max-height и то же самое с width */
-    min-height: 400px;
-}
-
-.section-light h2 {
-    text-align: center;
-    text-transform: uppercase;
-
-    /* Создает границу шириной 1px, solid - простой непрерывной линией, серого цвета */
-    /* bottom - только снизу */
-    border-bottom: 1px solid #ccc;
-
-    /* Отступить от текста, почему бы и нет */
-    margin-bottom: 15px;
-}
-
-.section-light p {
-    /* Выровнять текст по ширине по блока */
-    text-align: justify;
-}
-
-.footer {
-    padding-top: 35px;
-    height: 90px;
-    background-color: #333;
-    color: white;
-    text-align: center;
-}
-
 .row {
-    margin: 10px;
+    margin: 100px;
 }
-
 .col-4,
 .col-12 {
-    background: lightskyblue;
+    background: rgb(15, 59, 87);
     text-align: center;
-    height: 100px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    height: 20px;
+    margin-bottom: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
+    color: bisque;
 }
 
 .col-4 {
-    flex: 0 0 calc(100% / 3 - 20px);
+    flex: 10 10 calc(100% / 9 - 100px);
 }
-
 .col-12 {
     flex: 0 0 calc(100% - 20px);
 }
