--- a/PhtshopTemplate/stylesheets/style.css
+++ b/PhtshopTemplate/stylesheets/style.css
@@ -4,82 +4,167 @@ body {
     font-family: 'Roboto Condensed', 'Open Sans', sans-serif;
 }
 
+h1 {
+    /* Задать стили для всех заголовков вообще */
+    font-size: 48px;
+}
+
+p {
+    /* Задать стили для всех абзацев вообще */
+    font-size: 20px;
+}
+
 .header-navbar {
     background-color: #f7fdfe;
+    /* Задавай высоту для блоков */
+    height: 80px;
+    text-transform: uppercase;
+    /* Толщина текста - это жирнее текущего - жирный */
+    font-weight: bolder;
 }
 
-.dd-btn {
-    border-radius: 20%;
-    color: white;
-}
-
-.dd-btn :hover {
-    color: #000000;
-}
-
-.dd-lbl a {
+.navbar a {
     color: #82868f;
 }
 
-.header-logo {
-    height: 500px;
-    padding-top: 190px;
+.navbar .button {
+    /* Я вынес кнопку из ul, поэтому добавил ей отступ слева */
+    margin-left: 10px;
+    /* Размеры кнопки взяты из PSD */
+    width: 120px;
+    height: 38px;
+    /* На глаз подобрал скругление */
+    border-radius: 20px;
+    /* Эта штука для эффектов анимации, потом почитаешь */
+    transition: background-color .15s ease-in-out;
     text-align: center;
-    color: white;
+    /* Задал тексту высоту, как высоту кнопки, чтобы он был посередине */
+    /* Почему 40, а не 38? На глаз */
+    line-height: 40px;
+    background-color: #0ebfdd;
+    color: #fff;
+    /* Отключил подчеркивание при наведении */
+    text-decoration: none;
+}
+
+.navbar .button:hover {
+    background-color: #0ea2dd;
+}
+
+.header-logo {
+    /* Можно выравнять текст таким способом */
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 90px;
+    height: 600px;
     background: url('../images/mountain.jpg');
     background-size: cover;
-}
-
-.header-logo p {
-    font-size: 32px;
-}
-
-.section-dv {
-    height: 200px;
-    padding-top: 50px;
     text-align: center;
-    color: #000000;
-    background: #f7fdfe;
+    color: #fff;
+    /* Увеличить промежуток между символами - растянуть текст */
+    letter-spacing: 2px;
 }
 
-.section-dv h1 {
+.header-logo h1 {
+    /* Хак для выравнивания невыравниваемого текста посередине */
+    display: inline-table;
+}
+
+.header-logo h1 span {
+    /* Хак для выравнивания невыравниваемого текста посередине */
+    vertical-align: middle;
+    font-size: 18px;
+}
+
+/* Предлагаю именовать секции человекопонятным способом */
+.section-about {
+    /* Можно выравнять текст таким способом */
+    display: flex;
+    align-items: center;
+    height: 250px;
+    background: #f7fdfe;
+    color: #000;
+    text-align: center;
+}
+
+.section-about h1 {
     color: #0ebfdd;
     text-align: center;
 }
 
-.section-map {
-    height: 300px;
-    background: #333;
-}
-
-.section-map .google {
-    width: 100%;
-    height: 300px;
-}
-
-.section-light {
-    padding: 30px 0;
-    max-height: 400px;
+/* Предлагаю именовать секции человекопонятным способом */
+.section-team {
+    padding-top: 70px;
+    height: 600px;
     text-align: center;
     background: #0ebfdd;
     color: #f7fdfe;
 }
 
-.section-light h2 {
-    text-align: center;
-    text-transform: uppercase;
+.section-team .row {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.section-team h2 {
     border-bottom: 1px solid #ccc;
     margin-bottom: 15px;
 }
 
-.section-light p {
+.section-team .sennen-button {
+    width: 170px;
+    height: 40px;
+    border-radius: 20px;
+    transition: border .15s ease-in-out, box-shadow .15s ease-in-out;
+    text-align: center;
+    line-height: 38px;
+    background-color: #fff;
+    /* Отключил обводку, у кнопок по умолчанию есть */
+    outline: none;
+    /* Здесь задал границу такого же цвета, что и фон */
+    border: 1px solid #0ebfdd;
+    color: #0ebfdd;
+    text-transform: uppercase;
+    font-weight: bolder;
+    /* Показывать вместо курсора руку при наведении */
+    cursor: pointer;
+    /* Отбрасывать тень */
+    /* Первые два параметра отступы по оси X и Y */
+    /* Третий - размытие */
+    /* Четвертый толщина, я его пропустил, он равен нулю */
+    /* И цвет, RGBA позволяет задать прозрачность через четвертый параметр */
+    /* .3 = 0.3 и в RGBA значит 30% непрозрачность */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+}
+
+.section-team .sennen-button:hover {
+    /* А здесь меняю на белый и получаю эффект увеличения без лишнех строк кода */
+    border: 1px solid #fff;
+    /* Меняю тень при наведении */
+    box-shadow: 0 2px 10px 2px rgba(0, 0, 0, .3);
+}
+
+.section-team p {
     text-align: center;
 }
 
-.col img {
+/* Не пропускай вложенность, иначе может поплыть верстка в непредсказуемых местах */
+.section-team .col img {
     border-radius: 50%;
     height: 100px;
     width: 100px;
+}
+
+/* Блоки в css расставляй в том же порядке, что и блоки в html */
+.section-map {
+    /* Опять таки, задавай высоту блоку согласно шаблону */
+    height: 600px;
+    background: #333;
+}
+
+.section-map .google {
+    height: 600px;
+    width: 100%;
 }
 
 .footer {
