--- a/SecondTemplate/stylesheets/style.css
+++ b/SecondTemplate/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
     font-weight: bolder;
 }
 .header-logo {
-    height: 700px;  
+    height: 500px;  
     /* Выравнивание текста и цвет применятся на все дочернием блоки и элементы, в этом случае h1 и p */
     text-align: center;
     color: white;
@@ -32,7 +32,7 @@ body {
     color: #ccc;
 }
 
-.section-light {
+.section-service {
     /* Отступы сверху и снизу по 30px, слева и справа 0 - отступов нет */
     /* Равносильно записи padding-left: 30px; padding-right: 30px; */
     padding: 30px 0;
@@ -41,31 +41,92 @@ body {
     /* Если содержимого будет много, то по высоте блок растянется */
     /* Если указать просто height: 400px; то если текста будет слишком много, то он просто поползет за блок */
     /* Логично, что есть и max-height и то же самое с width */
-    min-height: 400px;
+    min-height: 200px;
 }
-.section-light h1 {
+.section-service h1 {
     text-align: center;
     text-transform: uppercase;
     border-bottom: 1px solid rgb(12, 154, 219);
     margin-bottom: 80px;
-    display: inline;
 }
-.section-light h2 {
+.section-service h2 {
     text-align: center;
     text-transform: uppercase;
     /* Отступить от текста, почему бы и нет */
     margin-bottom: 15px;
 }
 
-.section-light p {
+.section-service p {
     /* Выровнять текст по ширине по блока */
     text-align: justify;
 }
-.section-light .col img {
+.section-service .col img {
     border-radius: 50%;
     height: 50px;
     width: 50px;
 }
+
+.section-expertise {
+    padding-top: 70px;
+    height: 600px;
+    text-align: center;
+    background: #0ebfdd;
+    color: #f7fdfe;
+}
+
+.section-expertise .row {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.section-expertise h2 {
+    margin-bottom: 15px;
+}
+
+.section-expertise .expertise-button {
+    width: 170px;
+    height: 40px;
+    border-radius: 20px;
+    transition: border .15s ease-in-out, box-shadow .15s ease-in-out;
+    text-align: center;
+    line-height: 38px;
+    background-color: #fff;
+    /* Отключил обводку, у кнопок по умолчанию есть */
+    outline: none;
+    /* Здесь задал границу такого же цвета, что и фон */
+    border: 1px solid #0ebfdd;
+    color: #0ebfdd;
+    text-transform: uppercase;
+    font-weight: bolder;
+    /* Показывать вместо курсора руку при наведении */
+    cursor: pointer;
+    /* Отбрасывать тень */
+    /* Первые два параметра отступы по оси X и Y */
+    /* Третий - размытие */
+    /* Четвертый толщина, я его пропустил, он равен нулю */
+    /* И цвет, RGBA позволяет задать прозрачность через четвертый параметр */
+    /* .3 = 0.3 и в RGBA значит 30% непрозрачность */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+}
+
+.section-expertise .expertise-button:hover {
+    /* А здесь меняю на белый и получаю эффект увеличения без лишнех строк кода */
+    border: 1px solid #fff;
+    /* Меняю тень при наведении */
+    box-shadow: 0 2px 10px 2px rgba(0, 0, 0, .3);
+}
+
+.section-expertise p {
+    text-align: center;
+}
+
+/* Не пропускай вложенность, иначе может поплыть верстка в непредсказуемых местах */
+.section-expertise .col img {
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+}
+
 
 .footer {
     padding-top: 35px;
