--- a/SecondTemplate/stylesheets/style.css
+++ b/SecondTemplate/stylesheets/style.css
@@ -207,7 +207,8 @@ body {
 
 .flex-pictures img {
     height: 100%;
-    object-fit: contain;
+    width: 100%;
+    object-fit: none;
 }
 
 .footer {
