--- a/SecondTemplate/stylesheets/style.css
+++ b/SecondTemplate/stylesheets/style.css
@@ -235,15 +235,37 @@ body {
     background-color: #1e94d8;
 }
 
+.section-about h2 {
+    float: left;
+}
+
 .section-about p {
     font-size: 10px;
     color: #c5c5c5;
+    float: left;
 }
 
-.section-about .col-7 img {
-    border-radius: 50%;
+.section-about .col-md-7 img {
     height: 100px;
     width: 100px;
+    border-radius: 50%;
+    border: 2px solid rgb(136, 134, 134);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section-about .about-button {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    text-align: center;
+    background: #0ebfdd;
+    border: 2px solid rgb(136, 134, 134);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer {
