--- a/SecondTemplate/stylesheets/style.css
+++ b/SecondTemplate/stylesheets/style.css
@@ -193,6 +193,10 @@ body {
 .section-portfolio p {
     text-align: center;
 }
+.section-portfolio .col-md-7 i {
+    float: left;
+    font-size: 40px;
+}
 
 .flex-pictures {
     display: flex;
@@ -214,7 +218,7 @@ body {
 
 .section-about {
     padding-top: 70px;
-    height: 1500px;
+    height: 1200px;
     text-align: center;
     background: #fff;
 }
@@ -321,6 +325,31 @@ body {
     color: white;
     text-align: center;
 }
+.footer .row {
+    margin-bottom: 20px;
+}
+
+.footer i {
+    float: left;
+    margin-right: 10px;
+}
+.footer .col-6 h2 {
+    text-align: left;
+    font-weight: 900;
+}
+.footer .col-6 p {
+    font-size: 9px;
+    text-align: left;
+}
+.footer .col-md-6 input {
+    height: 80px;
+}
+.footer .col-md-3 p {
+    font-size: 10px;
+    text-align: left;
+    margin-left: 20px;
+    
+}
 
 .footer .footer-button {
     width: 170px;
@@ -338,6 +367,22 @@ body {
     text-transform: uppercase;
     font-weight: bolder;
     font-size: 10px;
+}
+
+.footer .col-12 {
+    text-align: center;
+    margin: 70px;
+    position: relative;
+}
+
+.footer .col-12::after {
+    content: "";
+    position: absolute;
+    top: calc(100% - 50px);
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #f7fdfe;
 }
 
 @media (max-width: 768px) {
