--- a/MediaProject/stylesheets/style.css
+++ b/MediaProject/stylesheets/style.css
@@ -1,3 +1,73 @@
 body {
     font-family: 'Roboto Condensed', 'Open Sans', sans-serif;
 }
+
+.header {
+    position: relative;
+    height: 400px;
+    overflow: hidden;
+}
+
+.header-navbar {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    font-size: 14px;
+    text-align: center;
+    z-index: 999;
+}
+.header-navbar .logo {
+    padding-top: 25px;
+}
+
+.header-navbar ul.nav {
+    display: none;
+    padding: 0px;
+    max-width: 0px;
+    list-style: none;
+    font-size: 12px;
+    line-height: 20px;
+    text-transform: uppercase;
+}
+
+.header-navbar ul.nav li {
+    display: inline-block;
+}
+
+.header-navbar ul.nav li:not(:last-child) {
+    margin-right: 10px;
+}
+
+.header-navbar ul.nav a,
+.header-navbar ul.nav a:visited {
+    color: #642642;
+    text-decoration: none;
+}
+.header-navbar ul.nav a.active {
+    color: aqua;
+}
+
+.header-navbar ul.nav a:hover,
+.header-navbar ul.nav a:focus {
+    color: aquamarine;
+    text-decoration: none;
+}
+.header-navbar.scroll {
+    background-color: #000;
+    height: 50px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .3) ;
+}
+.header-navbar.scroll .logo {
+    display: none;
+}
+.header-navbar.scroll ul .nav {
+    display: block;
+    line-height: 55px;
+}
+.header video {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    min-height: 400px;
+}
