--- a/MediaProject/stylesheets/style.css
+++ b/MediaProject/stylesheets/style.css
@@ -71,3 +71,48 @@ body {
     transform: translateX(-50%);
     min-height: 400px;
 }
+
+.imageses {
+    height: 600px;
+}
+.imageses .container {
+    padding: 0;
+    max-width: 100%;
+}
+
+.click {
+    padding-top: 20px;
+}
+
+.click-prev,
+.click-next {
+    position: absolute;
+    top: 50%;
+    display: block;
+    padding: 0;
+    -webkit-transform: translate(0, -55%);
+    -ms-transform: translate(0, -55%);
+    transform: translate(0, -55%);
+    font-size: 48px;
+    cursor: pointer;
+    color: #ddd;
+    border: none;
+    outline: none;
+}
+
+.click-prev:hover,
+.click-prev:focus,
+.click-next:hover,
+.click-next:focus {
+    color: #ddd;
+    outline: none;
+    background: transparent;
+}
+
+.click-prev {
+    left: -30px;
+}
+
+.click-next {
+    right: -30px;
+}
