--- a/cuba/stylesheets/style.css
+++ b/cuba/stylesheets/style.css
@@ -93,14 +93,14 @@ body {
 
 .section-team {
     height: 700px;
-    padding: 30px;
     background: #ececec;
     text-align: center;
+    padding: 30px;
 }
 
 .section-team h1 {
     text-align: center;
-    margin-bottom: 80px;
+    margin: 50px 0px 50px 0;
     position: relative;
     color: #494852;
 }
@@ -148,4 +148,32 @@ body {
 .section-team i {
     margin-top: 15px;
     font-size: 20px;
+}
+
+.section-skills {
+    padding-top: 70px;
+    height: 500px;
+    text-align: center;
+}
+
+.section-skills h1 {
+    text-align: center;
+    margin-bottom: 50px;
+    position: relative;
+}
+.section-skills h1::after {
+    content: "";
+    position: absolute;
+    top: calc(100% + 20px);
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 2px;
+    background-color:#c0c0c0;
+}
+.section-skills p {
+    font-size: 15px;
+    line-height: 5px;
+}
+.section-skills img {
+    padding: 50px 0px 50px 0px;
 }
