--- a/cuba/stylesheets/style.css
+++ b/cuba/stylesheets/style.css
@@ -77,9 +77,11 @@ body {
     padding-top: 70px;
     padding-bottom: 70px;
 }
+
 .section-service .info {
     position: relative;
 }
+
 .section-service h2 {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -93,7 +95,7 @@ body {
 
 .section-team {
     height: 700px;
-    background: #ececec;
+    background: #e7f1f8;
     text-align: center;
     padding: 30px;
 }
@@ -132,6 +134,7 @@ body {
     margin-bottom: 10px;
     color: #494852;
 }
+
 .section-team .lazur{
     text-align: center;
     font-size: 15px;
@@ -145,6 +148,7 @@ body {
     width: 100px;
     margin-bottom: 15px;
 }
+
 .section-team i {
     margin-top: 15px;
     font-size: 20px;
@@ -161,6 +165,7 @@ body {
     margin-bottom: 50px;
     position: relative;
 }
+
 .section-skills h1::after {
     content: "";
     position: absolute;
@@ -170,10 +175,96 @@ body {
     height: 2px;
     background-color:#c0c0c0;
 }
+
 .section-skills p {
     font-size: 15px;
     line-height: 5px;
 }
+
 .section-skills img {
     padding: 50px 0px 50px 0px;
 }
+
+.section-portfolio {
+    padding-top: 70px;
+    height: 1300px;
+    text-align: center;
+    background: #ffdd99;
+}
+
+.section-portfolio h1 {
+    text-align: center;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.section-portfolio h1::after {
+    content: "";
+    position: absolute;
+    top: calc(100% + 20px);
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 2px;
+    background: #e5c37f;
+}
+
+.section-portfolio p {
+    font-size: 15px;
+    line-height: 5px;
+}
+
+.section-portfolio .navbar-port{
+    text-align: center;
+}
+
+.section-portfolio .white {
+    color: black;
+    background: white;
+}
+
+.section-portfolio .byellow {
+    color: black;
+    background: #e5c37f;
+}
+
+.section-portfolio .row {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.section-portfolio .col-6 {
+    position: relative;
+}
+
+.section-portfolio image {
+    width: 500px;
+    height: 500px;
+    padding: 50px;
+}
+.section-portfolio .name {
+    text-align: center;
+    margin: 20px 0px 40px 0px;
+}
+
+.section-portfolio .portfolio-button {
+    width: 200px;
+    height: 40px;
+    background: #17c2a4;
+    border-color: #14a58c;
+    text-align: center;
+    margin: 30px;
+    font-size: 12px;
+    color: white;
+}
+
+/*.section-people {
+    background: #d74680;
+}
+.section-touch {
+    background: #3c5499;
+    button #30bae7; border 299ec5;
+    email #273a71;
+}
+.footer 
+background #344b8e;
+twitter 30bae7; */
