--- a/cuba/stylesheets/style.css
+++ b/cuba/stylesheets/style.css
@@ -257,9 +257,63 @@ body {
     color: white;
 }
 
-/*.section-people {
+.section-people {
+    padding-top: 70px;
+    height: 600px;
+    text-align: center;
     background: #d74680;
+    color: white;
 }
+
+.section-people h1 {
+    text-align: center;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.section-people h1::after {
+    content: "";
+    position: absolute;
+    top: calc(100% + 20px);
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 2px;
+    background: #f58cbb94;
+}
+.section-people h6 {
+    font-size: 15px;
+    margin-bottom: 40px; 
+}
+.section-people .row {
+    padding-bottom: 70px;
+}
+.section-people .col-md-2 img{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.section-people .col-md-4 p {
+    text-align: left;
+    font-size: 12px;
+    line-height: 5px;
+    font-style: italic;
+}
+.section-people .col-md-4 h2 {
+    font-size: 20px;
+    text-align: left;
+    font-weight: 500;
+}
+.section-people .profession {
+    text-align: left;
+    font-size: 12px;
+    color: #e5c37f;
+    font-style: normal; 
+}
+
+
+/*
 .section-touch {
     background: #3c5499;
     button #30bae7; border 299ec5;
