--- a/autochess/stylesheets/style.css
+++ b/autochess/stylesheets/style.css
@@ -59,39 +59,13 @@ body {
     text-align: center;
 }
 
-.builder {
-    position: relative;
+.builder-logo {
     min-height: 1000px;
-    padding-top: 100px;
+    padding-top: 190px;
     text-align: center;
     color: white;
-    background: url('../images/board.jpg');
-    background-position: center;
+    background: url('../images/board.jpg'); 
     background-size: cover;
-}
-
-.builder .heroes-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.builder .panel-heroes {
-    position: absolute;
-    left: 0;
-    right: 0;
-}
-
-.builder .panel-heroes img {
-    width: 100px;
-    height: 100px;
-}
-
-.builder .recommended-heroes {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 130px;
 }
 
 .rarity-logo {
